# PCAP-Analysis-tool

./: LICENSE  README.md  device_fingerprinting.py  device_intelligence.py  install_linux.sh  install_windows.bat  internet_intelligence.py  netsleuth.py  pyproject.toml  report_generator.py  requirements.txt  run.bat  run.sh  wifi_intelligence.py
config/: __init__.py  config.yaml  settings.py
core/: __init__.py  packet_processor.py  payload_extractor.py  pcap_reader.py  protocol_dispatcher.py
database/: __init__.py  db_manager.py  schema.py
docs/: ARCHITECTURE.md  INSTALL.md  USAGE.md
exporters/: __init__.py  csv_exporter.py  json_exporter.py
models/: __init__.py  device.py  packet.py
protocols/: __init__.py  arp.py  ethernet.py  ipv4.py  ipv6.py
tests/: __init__.py  conftest.py  test_database.py  test_helpers.py
utils/: __init__.py  helpers.py  logger.py  oui_lookup.py
